--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,10 @@ dependencies {
     // ProgressBar Loading Animation
     implementation "com.airbnb.android:lottie:4.2.2"
 
+    //pagination Paging 3
+    def paging_version = "3.1.1"
+    implementation "androidx.paging:paging-runtime:$paging_version"
+
 
 }
 kapt {
