--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name="com.areeb.sekaisheet.MainApplication"
         android:allowBackup="true"
@@ -15,6 +16,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SekaiSheet"
         tools:targetApi="31">
+        <activity
+            android:name="com.areeb.sekaisheet.ui.homeDetail.activity.HomeDetailActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name="com.areeb.sekaisheet.ui.base.MainActivity"
             android:exported="true">
@@ -28,6 +36,7 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
