--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         tools:targetApi="31">
         <activity
             android:name="com.areeb.sekaisheet.ui.homeDetail.activity.HomeDetailActivity"
+            android:theme="@style/FullScreenApp"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
