added custom dialog

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.SET_WALLPAPER" />
 
     <application
@@ -19,9 +18,16 @@
         android:theme="@style/Theme.SekaiSheet"
         tools:targetApi="31">
         <activity
-            android:name="com.areeb.sekaisheet.ui.homeDetail.activity.HomeDetailActivity"
-            android:theme="@style/FullScreenApp"
+            android:name="com.areeb.sekaisheet.ui.search.activity.SearchActivity"
             android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name="com.areeb.sekaisheet.ui.homeDetail.activity.HomeDetailActivity"
+            android:exported="false"
+            android:theme="@style/FullScreenApp">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
