--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,12 +10,12 @@ plugins {
 
 android {
     namespace 'com.example.sekaisheet'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.sekaisheet"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -88,6 +88,9 @@ dependencies {
 
     //gson
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    //shimmer effect
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
 
 }
