īn process spinning wheel

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,16 @@
         android:theme="@style/Theme.SekaiSheet"
         tools:targetApi="31">
         <activity
-            android:name=".SpinnerActivity"
+            android:name="com.areeb.sekaisheet.ui.splashScreen.activity.SplashScreenActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.areeb.sekaisheet.ui.spiningWheel.activity.SpinnerActivity"
             android:exported="false" />
         <activity
             android:name="com.areeb.sekaisheet.ui.search.activity.SearchActivity"
